# storm-workbench

./: .dockerignore  .drone.yml  .editorconfig  .gitignore  .readthedocs.yml  CHANGES.rst  Dockerfile  MANIFEST.in  README.rst  last_build.txt  pyproject.toml  pytest.ini  run-tests.sh  setup.cfg  setup.py
.github/workflows/: docker.yaml
docs/sphinx/: Makefile  api.rst  conf.py  history.rst  index.rst  installation.rst  license.rst  repository.rst  usage.rst
examples/: example.py
examples/fmask-processing/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  environment.yml  run.sh  workbench.toml
examples/fmask-processing/checksums/: md5sums.txt  sha256sums.txt  sha512sums.txt
examples/temporal-analysis/: Makefile  Stormfile  Vagrantfile  pyproject.toml  workbench.toml
examples/temporal-analysis/analysis/: 01_generate-ndwi.py  02_extract-time-series.py  03_visualizing-time-series.py
examples/temporal-analysis/bootstrap/: base.sh
examples/temporal-analysis/checksums/: md5sums.txt  sha256sums.txt  sha512sums.txt
examples/temporal-analysis/compendium/: __init__.py  parallelly.py
examples/temporal-analysis/data/derived_data/: brick-cbers4-awfi-ndwi2.tif  sample-water-timeseries.csv
examples/temporal-analysis/data/input_data/bricks/: brick-cbers4-awfi-band14.tif  brick-cbers4-awfi-band16.tif
examples/temporal-analysis/data/input_data/samples/: data-package.gpkg  samples-water.dbf  samples-water.shp  samples-water.shx
examples/temporal-analysis/download/: Makefile  README.rst  pyproject.toml
examples/temporal-analysis/download/checksums/: md5sums.txt  sha256sums.txt  sha512sums.txt
examples/temporal-analysis/download/data/raw_data/: data-package.gpkg
examples/temporal-analysis/download/scripts/: 01-download.py
examples/temporal-analysis/modules/download/scripts/: 01-download.py  toolbox.py
examples/temporal-analysis/modules/execution/: Makefile  pyproject.toml
storm_workbench/: __init__.py  accessor.py  constants.py  entry_point.py  exceptions.py  location.py  settings.py  template.py  version.py  workbench.py
storm_workbench/api/: accessor.py
storm_workbench/api/backstage/: accessor.py  argparser.py  session.py
storm_workbench/api/backstage/database/: __init__.py  model.py
storm_workbench/api/stage/: accessor.py  base.py  decorator.py
storm_workbench/api/stage/database/: service.py
storm_workbench/api/stage/environment/: service.py
storm_workbench/api/stage/exporter/: accessor.py  bagit.py  base.py
storm_workbench/api/stage/exporter/compendium/: service.py
storm_workbench/api/stage/exporter/dataset/: service.py
storm_workbench/api/stage/operation/: accessor.py  service.py
storm_workbench/api/stage/ws/: accessor.py  decorator.py  service.py
storm_workbench/api/stage/ws/compendium/: service.py
storm_workbench/api/stage/ws/context/: service.py
storm_workbench/api/stage/ws/deposit/: service.py
storm_workbench/api/stage/ws/execution/: __init__.py  service.py
storm_workbench/api/stage/ws/job/: service.py
storm_workbench/api/stage/ws/pipeline/: service.py
storm_workbench/api/stage/ws/project/: service.py
storm_workbench/api/stage/ws/workflow/: service.py
storm_workbench/cli/: __init__.py  cli.py
storm_workbench/cli/commands/: env.py  environment.py  exec.py  export.py  import.py  index.py  operation.py  workbench.py
storm_workbench/cli/commands/service/: __init__.py  compendium.py  context.py  deposit.py  job.py  pipeline.py  project.py  service.py  workflow.py
storm_workbench/cli/commands/templates/: workbench.toml
storm_workbench/cli/graphics/: __init__.py  aesthetic.py  graph.py  table.py  tree.py
storm_workbench/service/: __init__.py
storm_workbench/settings/: __init__.py  api.py
storm_workbench/templates/config/: secrets.toml  workbench.toml
storm_workbench/templates/form/: package.md
storm_workbench/workbench/: __init__.py  session.py  settings.py  store.py  workbench.py
tests/: test_storm_workbench.py
