[tool.poetry]
name = "storm-workbench"
version = "0.1.0"
description = "Reproducible Research management tool"
authors = ["Felipe Menino Carlos <felipe.carlos@inpe.br>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
