[tool.poetry]
name = "storm-workbench"
version = "0.1.0"
license = "MIT"

description = "Reproducible Research management tool"
authors = ["Felipe Menino Carlos <felipe.carlos@inpe.br>"]

include = ["storm_workbench/cli/commands/templates/*"]

classifiers = [
    'Development Status :: 1 - Planning',
    'Environment :: Web Environment',
    'Intended Audience :: Education',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3.7',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Scientific/Engineering :: GIS',
]

[tool.poetry.dependencies]
python = "^3.8"

#
# Configuration
#
tomlkit = "^0.8.0"
dynaconf = "^3.1.7"

#
# CLI (Optional)
#
rich = { version = "^10.16.1", optional = true }
asciidag = { version = "^0.2.0", optional = true }

#
# Storm
#
storm-git = { git = "https://github.com/storm-platform/storm-git" }
storm-core = { git = "https://github.com/storm-platform/storm-core.git", extras = ["ray-backend", "paradag-backend", "persistence-helper", "plotting-helper", "exporter-helper"] }


[tool.poetry.extras]
cli = ["rich", "asciidag"]

[tool.poetry.scripts]
workbench = "storm_workbench.cli.cli:workbench_cli"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
