[tool.poetry]
name = "compendium"
version = "0.1.0"
description = ""
authors = ["Felipe Carlos <efelipecarlos@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "compendium"}]

[tool.poetry.dependencies]
python = "^3.8"
rasterio = "^1.3.2"
joblib = "^1.2.0"
geopandas = "^0.11.1"
plotnine = "^0.9.0"
matplotlib = "<3.6.0"
storm-workbench = {git = "https://github.com/storm-platform/storm-workbench"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
