[tool.poetry]
name = "temporal-analysis-download"
version = "0.1.0"
description = "Useful scripts to download data used in the temporal analysis example"
authors = ["Felipe Carlos <efelipecarlos@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
geopandas = "^0.11.1"
pystac = "^1.6.1"
natsort = "^8.2.0"
rasterio = "^1.3.2"
pystac-client = "^0.5.1"


[tool.poetry.group.dev.dependencies]
black = "^22.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
